updated ignore and field path

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     {{#infographics}}
     <div class="row">
         <div class="two-thirds column">
-            <h2><a href="{{path}}">{{title}}</a></h2>
+            <h2><a href="{{field_external_link}}">{{title}}</a></h2>
             <p>{{field_teaser}}</p>
 
             <a href="{{path}}" class="button">View Online</a> <a href="{{field_pdf}}" class="button">Download PDF</a>
