--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     {{#infographics}}
     <div class="row">
         <div class="two-thirds column">
-            <h2><a href="{{field_external_link}}">{{title}}</a></h2>
-            <p>{{field_teaser}}</p>
+            <h2><a href="{{path}}">{{title}}</a></h2>
+            <p>{{teaser}}</p>
 
             <a href="{{path}}" class="button">View Online</a> <a href="{{field_pdf}}" class="button">Download PDF</a>
         </div>
-        <div class="one-third column"><img src="{{field_stats_image_1.src}}" alt="{{field_stats_image.alt}}" /></div>
+        <div class="one-third column"><img src="{{image.src}}" alt="{{image.alt}}" /></div>
     </div>
     {{/infographics}}
 </script>
